[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Inter-SemiBold-slnt=0.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/SettingsSlider.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.172549, 0.203922, 0.247059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 3

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.215686, 0.243137, 0.286275, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.470588, 0.533333, 0.627451, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
Label/colors/font_color = Color( 0.894118, 0.894118, 0.894118, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
Panel/styles/panel = SubResource( 1 )
PanelContainer/styles/panel = SubResource( 1 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = SubResource( 2 )
TooltipPanel/styles/panel = SubResource( 3 )
VSeparator/constants/separation = 4
VSeparator/styles/separator = SubResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 1 )

[node name="SettingsSlider" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
rect_min_size = Vector2( 0, 48 )
theme = SubResource( 6 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 454.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 0 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 454.0
margin_bottom = 39.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
margin_right = 250.0
margin_bottom = 39.0

[node name="HSlider" type="HSlider" parent="HBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 16.0
rect_min_size = Vector2( 250, 0 )
tick_count = 3
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 250.0
margin_bottom = 39.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 15.0
margin_bottom = 19.0
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderLeftLabel" type="Label" parent="HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 5.0
margin_right = 15.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="SpacingControl" type="Control" parent="HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 214.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 250.0
margin_bottom = 19.0
custom_constants/margin_right = 5
custom_constants/margin_left = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderRightLabel" type="Label" parent="HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_right = 27.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 7 )
text = "100"
[connection signal="value_changed" from="HBoxContainer/CenterContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
